# chatbot-RAG

./: .env.example  .gitignore  README.md  app.py  config.py  document_loader.py  embedding_service.py  generator.py  ingestion_pipeline.py  passenger_wsgi.py  pyproject.toml  rag_pipeline.py  requirements.txt  retriever.py  text_chunker.py  vector_store.py
data/Formulir_Permohonan/: KB_FORM_PERMOHONAN.md
data/Jadwal_Mata_Kuliah/: KB_JADWAL_MATA_KULIAH.md
data/Kalender_Akademik/: KB_KALENDER_AKADEMIK.md
data/Kurikulum/: KB_KURIKULUM.md
data/Magang/: KB_PEDOMAN_MAGANG_BAB I.md  KB_PEDOMAN_MAGANG_LAMPIRAN.md
data/Panduan_Pendidikan/: KB_LAYANAN_ADMINISTRASI_AKADEMIK.md  KB_PELAKSANAAN_PEMBELAJARAN_LUAR_KAMPUS.md  KB_PROGRAM_STUDI.md  KB_SISTEM_PENDIDIKAN.md
data/Skripsi/: KB_PEDOMAN_SKRIPSI_BAB I.md  KB_PEDOMAN_SKRIPSI_BAB II.md  KB_PEDOMAN_SKRIPSI_BAB V.md  KB_PEDOMAN_SKRIPSI_BAB VI.md  KB_PEDOMAN_SKRIPSI_LAMPIRAN.md
documents/Magang/: KB_PEDOMAN_MAGANG_BAB II.md  KB_PEDOMAN_MAGANG_BAB III.md  KB_PEDOMAN_MAGANG_BAB IV.md
documents/Skripsi/: KB_PEDOMAN_SKRIPSI_BAB II.md  KB_PEDOMAN_SKRIPSI_BAB III.md  KB_PEDOMAN_SKRIPSI_BAB IV.md  KB_PEDOMAN_SKRIPSI_BAB V.md
evaluation/: evaluate_ragas.py  progress.json  ragas_result.csv  test_questions.json
src/config/: config.py  prompts.md  prompts.py  prompts_id.md
src/controllers/: chat_controller.py
src/core/: generator.py  rag_pipeline.py  retriever.py
src/ingestion/: document_loader.py  (+2 more)
templates/: cara-penggunaan.html  dashboard.html  index.html  landing-page.html  log.html  log_embedding.html
(+8 files in other folders)
