[project]
name = "chatbot-rag"
version = "0.1.0"
description = "RAG Chatbot Akademik TIF"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "flask",
    "chromadb",
    "pypdf",
    "langchain-text-splitters",
    "python-dotenv",
    "google-genai>=1.73.1",
    "python-docx>=1.2.0",
    "llama-index>=0.14.20",
    "llama-index-embeddings-huggingface>=0.7.0",
    "ragas==0.1.9",
    "datasets>=4.8.5",
    "pandas>=2.3.3",
    "langchain==0.1.20",
    "langchain-core==0.1.52",
    "langchain-community==0.0.38",
    "langchain-google-genai==1.0.3",
    "langchain-openai==0.1.7",
    "google-generativeai>=0.5.4",
    "google-cloud-aiplatform>=1.148.1",
    "openai>=1.109.1",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = ["gunicorn"]
